# uv-litellm-crewai

demo_project/: README.md  poem.txt  pyproject.toml
demo_project/src/demo_project/: main.py
